"[CHG] se hace prueba automatica de git "

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <div class="inacap-item"><a href="https://cl.puma.com/" target="_blank">puma</a></div>
             <div class="inacap-item"><a href="https://www.reebok.cl/" target="_blank">reebok</a></div>
         </section>
+         <span>hola mundo</span>
+
 
 
     </div>
