--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" tipo="image/png" tamaños="32x32" href="img/favicon-32x32.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VETCARE</title>
+    <title>VetCare</title>
+    <meta name="description" content="Veterinaria VetCare - Cuidamos de tus mascotas con amor y profesionalismo.">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -27,31 +28,28 @@
                             <a class="nav-link active" aria-current="page" href="#">inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Tienda</a>
+                            <a class="nav-link" href="tienda.html">Tienda</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Contactos
 
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <a class="nav-link" href="informacion.html">Contactos</a>
                         </li>
+                        </a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contactos.html">Contactanos</a>
+                        </li>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                        </li>
+
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
@@ -60,41 +58,42 @@
 
 
         <!--inicio de pagina-->
-        <h1 class="inacap-titulo">Veterinaria VetCare</h1>
+
         <p class="inacap-parrafo"></p>
         <div class="inacap_container_img">
             <img src="img/banner 3.png" alt="banner de la veterinaria" class="inacap-img">
-
-
         </div>
-        <p class="inacap-parrafo">Bienvenidos a VetCare, tu veterinaria de confianza. Nos dedicamos a cuidar y proteger
-            la salud de tus mascotas. Ofrecemos servicios veterinarios de alta calidad y productos para el bienestar de
-            tus animales.</p>
-        <p class="inacap-parrafo">En VetCare, entendemos que tus mascotas son parte de tu familia. Por eso, nos
-            comprometemos a brindarles la mejor atención y cuidado posible. Nuestro equipo de veterinarios altamente
-            capacitados está aquí para ayudarte en todo lo que necesites.</p>
+        <h1 class="inacap-titulo">Veterinaria VetCare</h1>
+        <div class="inacap_container_wrapper">
 
-        <p class="inacap-parrafo">Desde chequeos de rutina hasta tratamientos especializados, en VetCare tenemos todo lo
-            que tu mascota necesita para mantenerse saludable y feliz. Además, contamos con una amplia gama de productos
-            para el cuidado de tus animales, desde alimentos hasta accesorios.</p>
-        <p class="inacap-parrafo">No dudes en visitarnos y conocer más sobre nuestros servicios. Estamos aquí para
-            ayudarte a cuidar de tus mascotas y asegurarnos de que tengan una vida larga y saludable.</p>
 
-        <!--<section class="inacap-container-link"> 
-            <div class="inacap-item"><a href="https://www.adidas.cl/" target="_blank">adidas</a> </div>
-            <div class="inacap-item"><a href="https://cl.puma.com/" target="_blank">puma</a></div>
-            <div class="inacap-item"><a href="https://www.reebok.cl/" target="_blank">reebok</a></div>
-        </section>-->
+            <p class="inacap-parrafo">Bienvenidos a VetCare, tu veterinaria de confianza. Nos dedicamos a cuidar y
+                proteger
+                la salud de tus mascotas. Ofrecemos servicios veterinarios de alta calidad y productos para el bienestar
+                de
+                tus animales.</p>
+            <p class="inacap-parrafo">En VetCare, entendemos que tus mascotas son parte de tu familia. Por eso, nos
+                comprometemos a brindarles la mejor atención y cuidado posible. Nuestro equipo de veterinarios altamente
+                capacitados está aquí para ayudarte en todo lo que necesites.</p>
 
-        <p>Puedes encontarnos en las siguientes ubicaciones
-            <a href="https://goo.gl/maps/2v7Z5x8G3Qk" target="_blank">Sucursal Puente Alto</a> y <a
-                href="https://goo.gl/maps/2v7Z5x8G3Qk" target="_blank">Sucursal Santiago Centro</a>. También puedes
-            contactarnos a
-            través de nuestras redes sociales o llamarnos al número de teléfono que aparece en nuestra página de
-            contacto. ¡Estamos aquí para ayudarte!
-        </p>
-        <p>¡Gracias por elegir VetCare! Esperamos verte pronto y poder cuidar de tus mascotas como se merecen.</p>
-        </p>
+            <p class="inacap-parrafo">Desde chequeos de rutina hasta tratamientos especializados, en VetCare tenemos
+                todo lo
+                que tu mascota necesita para mantenerse saludable y feliz. Además, contamos con una amplia gama de
+                productos
+                para el cuidado de tus animales, desde alimentos hasta accesorios.</p>
+            <p class="inacap-parrafo">No dudes en visitarnos y conocer más sobre nuestros servicios. Estamos aquí para
+                ayudarte a cuidar de tus mascotas y asegurarnos de que tengan una vida larga y saludable.</p>
+
+            <p>Puedes encontarnos en las siguientes ubicaciones
+                <a href="https://goo.gl/maps/2v7Z5x8G3Qk" target="_blank">Sucursal Puente Alto</a> y <a
+                    href="https://goo.gl/maps/2v7Z5x8G3Qk" target="_blank">Sucursal Santiago Centro</a>. También puedes
+                contactarnos a
+                través de nuestras redes sociales o llamarnos al número de teléfono que aparece en nuestra página de
+                contacto. ¡Estamos aquí para ayudarte!
+            </p>
+            <p>¡Gracias por elegir VetCare! Esperamos verte pronto y poder cuidar de tus mascotas como se merecen.</p>
+            </p>
+        </div>
 
 
 
@@ -113,6 +112,11 @@
 
 
     <script src="main.js"></script>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
